--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,16 +5,16 @@ rust-version = "1.65"
 license = "MIT OR Apache-2.0"
 
 [workspace]
-members = [
-    "transactions", 
-    "examples/*",
-]
+members = ["transactions", "examples/*"]
 
 [workspace.dependencies]
 env_logger = "0.10.0"
 log = "0.4.19"
 futures = "0.3.25"
-reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v0.1.0-alpha.8" }
+reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v0.1.0-alpha.6" }
+reth-rlp = { git = "https://github.com/paradigmxyz/reth.git", tag = "v0.1.0-alpha.6" }
+
 thiserror = "1.0.40"
 tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
 tokio-stream = "0.1.14"
+tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
