--- a/examples/transactions/Cargo.toml
+++ b/examples/transactions/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
 name = "examples-transactions"
-version = "0.0.0"
 publish = false
-authors = ["Andrea Simeoni <andreasimeoni84@gmail.com>"]
+version.workspace = true
 license.workspace = true
 rust-version.workspace = true
 edition.workspace = true
