--- a/transactions/Cargo.toml
+++ b/transactions/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "merkle-sdk-transactions"
-version = "0.1.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -9,9 +9,9 @@ edition = "2021"
 env_logger = { workspace = true }
 log = { workspace = true }
 futures = { workspace = true }
-reth-primitives = { workspace = true }
-reth-rlp = { workspace = true }
+ethers = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
 tokio-stream = { workspace = true }
 tokio-tungstenite = { workspace = true }
+rlp = { version = "0.5", features = ["derive"] }
