--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ rust-version = "1.65"
 license = "MIT OR Apache-2.0"
 
 [workspace]
-members = ["transactions", "examples/*"]
+members = ["sdk", "transactions", "examples/*"]
 
 [workspace.dependencies]
 env_logger = "0.10.0"
