--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,9 @@
 [workspace.package]
+description = "A Rust library for seamless integration with Merkle's services."
 version = "0.0.1"
 edition = "2021"
 rust-version = "1.65"
+repository = "https://github.com/merkle3/merkle-sdk-rs"
 license = "MIT OR Apache-2.0"
 
 [workspace]
