--- a/examples/transactions/Cargo.toml
+++ b/examples/transactions/Cargo.toml
@@ -1,10 +1,12 @@
 [package]
 name = "examples-transactions"
+description = "Examples for the transactions crate"
 publish = false
 version.workspace = true
 license.workspace = true
 rust-version.workspace = true
 edition.workspace = true
+repository.workspace = true
 
 [dev-dependencies]
 log = { workspace = true }
