--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ thiserror = "1.0.40"
 tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
 tokio-stream = "0.1.14"
 tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
+
+# workspace crates
+merkle-sdk-transactions = { version = "0.0.1", path = "transactions" }
