--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -9,4 +9,4 @@ repository.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-merkle-sdk-transactions = { path = "../transactions" }
+merkle-sdk-transactions.workspace = true
