--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "merkle-sdk"
 description = "A Rust library for seamless integration with Merkle's services."
+readme = "../README.md"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
