--- a/transactions/Cargo.toml
+++ b/transactions/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "merkle-sdk-transactions"
 description = "Utilities to access the Merkle's transactions network"
+readme = "README.md"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
